test/langtools/tools/javac/superInit/SuperInitBad06.out
SuperInitBad06.java:13:9: compiler.err.cant.ref.before.ctor.called: this
1 error
